app/objects/Poulet_Vaccine__c.object
<CustomObject>
    <fields>
        <fullName>Camp_Vacccination__c</fullName>
        <label>Camp Vacccination</label>
        <referenceTo>Campagne_de_vaccination__c</referenceTo>
        <relationshipLabel>Poulet Vaccine</relationshipLabel>
        <relationshipName>Cvacc</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PV__c</fullName>
        <label>PV</label>
        <referenceTo>Poulet__c</referenceTo>
        <relationshipLabel>Poulet Vaccine</relationshipLabel>
        <relationshipName>Poulet_Vaccine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prix_unitaire__c</fullName>
        <label>Prix unitaire</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Poulet Vaccine</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poulet Vaccine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>